# fPDK

./: .gitignore  AssistedProofingInterface.py  AutomaticProofingInterface.py  LICENSE  README.md  fPDK.py  main.py  pyproject.toml  requirements.txt  setup.py
Lib/fPDK/: __init__.py  fPDK.py
fPDK/: __init__.py  fPDK.py
lib/fpdk/: fpdk.py
